// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_ANIS_SWEETDEVIL_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 5,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 324911,
      "sourceUnitDefinitionId": "UNIT_AOI_GUARDIAN",
      "sourceUnitId": "ally:4",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 722325,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1197249,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 3,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 1724623,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 4,
    },
    {
      "breakNumber": 5,
      "cumulativeScoreAtBreak": 2326971,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 5,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_ANIS_SWEETDEVIL_TEX",
  "eventCount": 8233,
  "eventSequenceHash": "sha256:bbfd4a9d2fe7596e",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 140,
    "ACTION_COMPLETING": 140,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_QUEUE_REORDERED": 4,
    "ACTION_RESERVATION_REMOVED": 1,
    "ACTION_STARTED": 140,
    "ACTION_WAITED": 3,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 116,
    "CONTINUOUS_DAMAGE_APPLIED": 59,
    "COOLDOWN_COMPLETED": 73,
    "COOLDOWN_REDUCED": 99,
    "COOLDOWN_STARTED": 77,
    "CRITICAL_CHECK_RESOLVED": 428,
    "DAMAGE_APPLIED": 428,
    "DAMAGE_CALCULATED": 428,
    "DAMAGE_WILL_BE_APPLIED": 428,
    "EFFECTIVE_EFFECT_CHANGED": 12,
    "EFFECT_ACTION_COMPLETED": 511,
    "EFFECT_ACTION_STARTING": 511,
    "EFFECT_APPLIED": 135,
    "EFFECT_CONSUMPTION_CHANGED": 28,
    "EFFECT_DURATION_REDUCED": 115,
    "EFFECT_EXPIRED": 103,
    "EFFECT_MERGED": 3,
    "EFFECT_REMOVED": 17,
    "EFFECT_STEP_COMPLETED": 543,
    "EFFECT_STEP_STARTING": 543,
    "EVASION_ACTIVATED": 2,
    "EXERCISE_SCORE_ACCUMULATED": 411,
    "EXERCISE_SCORE_DEDUCTED": 25,
    "EXTRA_GAUGE_INCREASED": 60,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 10,
    "HEAL_APPLIED": 57,
    "HIT_CONFIRMED": 428,
    "HIT_POINT_REDUCED": 428,
    "MARKER_APPLIED": 18,
    "MARKER_REMOVED": 14,
    "MARKER_UPDATED": 44,
    "PASSIVE_ACTIVATED": 65,
    "PASSIVE_POINT_CONSUMED": 65,
    "PASSIVE_RESOLVED": 65,
    "RANDOM_BRANCH_SELECTED": 24,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 542,
    "RUNTIME_COUNTER_CHANGED": 65,
    "RUNTIME_COUNTER_RESET": 25,
    "SHIELD_CONSUMED": 54,
    "SKILL_USE_COMPLETED": 137,
    "SKILL_USE_STARTED": 137,
    "SKILL_USE_STARTING": 137,
    "TARGETS_SELECTED": 137,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 141,
    "UNIT_BROKEN": 5,
    "UNIT_REVIVED": 5,
  },
  "totalScore": 2351794,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_AOI_GUARDIAN_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 385500,
      "sourceUnitDefinitionId": "UNIT_AOI_ELEGANT",
      "sourceUnitId": "ally:3",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 871760,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1408747,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 3,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 2012566,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 4,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_AOI_GUARDIAN_TEX",
  "eventCount": 7057,
  "eventSequenceHash": "sha256:c01e3616a784f309",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 139,
    "ACTION_COMPLETING": 139,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_QUEUE_REORDERED": 3,
    "ACTION_RESERVATION_REMOVED": 1,
    "ACTION_STARTED": 139,
    "ACTION_WAITED": 9,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 92,
    "CONTINUOUS_DAMAGE_APPLIED": 53,
    "COOLDOWN_COMPLETED": 87,
    "COOLDOWN_REDUCED": 113,
    "COOLDOWN_STARTED": 89,
    "CRITICAL_CHECK_RESOLVED": 382,
    "DAMAGE_APPLIED": 382,
    "DAMAGE_CALCULATED": 382,
    "DAMAGE_WILL_BE_APPLIED": 382,
    "EFFECTIVE_EFFECT_CHANGED": 10,
    "EFFECT_ACTION_COMPLETED": 388,
    "EFFECT_ACTION_STARTING": 388,
    "EFFECT_APPLIED": 136,
    "EFFECT_CONSUMPTION_CHANGED": 16,
    "EFFECT_DURATION_REDUCED": 126,
    "EFFECT_EXPIRED": 106,
    "EFFECT_MERGED": 6,
    "EFFECT_REMOVED": 10,
    "EFFECT_STEP_COMPLETED": 389,
    "EFFECT_STEP_STARTING": 389,
    "EVASION_ACTIVATED": 5,
    "EXERCISE_SCORE_ACCUMULATED": 385,
    "EXERCISE_SCORE_DEDUCTED": 18,
    "EXTRA_GAUGE_INCREASED": 49,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 8,
    "HEAL_APPLIED": 50,
    "HIT_CONFIRMED": 382,
    "HIT_POINT_REDUCED": 382,
    "MARKER_APPLIED": 14,
    "MARKER_REMOVED": 10,
    "MARKER_UPDATED": 24,
    "PASSIVE_ACTIVATED": 53,
    "PASSIVE_POINT_CONSUMED": 53,
    "PASSIVE_RESOLVED": 53,
    "RANDOM_BRANCH_SELECTED": 15,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 447,
    "RUNTIME_COUNTER_CHANGED": 1,
    "SHIELD_CONSUMED": 41,
    "SKILL_USE_COMPLETED": 130,
    "SKILL_USE_STARTED": 130,
    "SKILL_USE_STARTING": 130,
    "TARGETS_SELECTED": 130,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 136,
    "UNIT_BROKEN": 4,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2618874,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_LAYLA_NURSE_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 440514,
      "sourceUnitDefinitionId": "UNIT_ANIS_SWEETDEVIL",
      "sourceUnitId": "ally:1",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 983808,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1597978,
      "sourceUnitDefinitionId": "UNIT_AOI_ELEGANT",
      "sourceUnitId": "ally:3",
      "turnNumber": 3,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 2297876,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 5,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_LAYLA_NURSE_TEX",
  "eventCount": 7371,
  "eventSequenceHash": "sha256:69add3deccf9f989",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 138,
    "ACTION_COMPLETING": 138,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_QUEUE_REORDERED": 2,
    "ACTION_RESERVATION_REMOVED": 2,
    "ACTION_STARTED": 138,
    "ACTION_WAITED": 3,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 107,
    "CONTINUOUS_DAMAGE_APPLIED": 43,
    "COOLDOWN_COMPLETED": 83,
    "COOLDOWN_REDUCED": 115,
    "COOLDOWN_STARTED": 86,
    "CRITICAL_CHECK_RESOLVED": 384,
    "DAMAGE_APPLIED": 384,
    "DAMAGE_CALCULATED": 384,
    "DAMAGE_WILL_BE_APPLIED": 384,
    "EFFECTIVE_EFFECT_CHANGED": 12,
    "EFFECT_ACTION_COMPLETED": 440,
    "EFFECT_ACTION_STARTING": 440,
    "EFFECT_APPLIED": 145,
    "EFFECT_CONSUMPTION_CHANGED": 25,
    "EFFECT_DURATION_REDUCED": 119,
    "EFFECT_EXPIRED": 113,
    "EFFECT_MERGED": 3,
    "EFFECT_REMOVED": 12,
    "EFFECT_STEP_COMPLETED": 430,
    "EFFECT_STEP_STARTING": 430,
    "EVASION_ACTIVATED": 13,
    "EXERCISE_SCORE_ACCUMULATED": 395,
    "EXERCISE_SCORE_DEDUCTED": 3,
    "EXTRA_GAUGE_INCREASED": 56,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 9,
    "HEALING_TRANSFERRED": 3,
    "HEAL_APPLIED": 33,
    "HIT_CONFIRMED": 384,
    "HIT_POINT_REDUCED": 384,
    "MARKER_APPLIED": 23,
    "MARKER_REMOVED": 19,
    "MARKER_UPDATED": 39,
    "PASSIVE_ACTIVATED": 62,
    "PASSIVE_POINT_CONSUMED": 62,
    "PASSIVE_RESOLVED": 62,
    "RANDOM_BRANCH_SELECTED": 15,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 484,
    "RUNTIME_COUNTER_CHANGED": 4,
    "RUNTIME_COUNTER_RESET": 1,
    "SHIELD_CONSUMED": 15,
    "SKILL_USE_COMPLETED": 135,
    "SKILL_USE_STARTED": 135,
    "SKILL_USE_STARTING": 135,
    "TARGETS_SELECTED": 135,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 150,
    "UNIT_BROKEN": 4,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2679135,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_LYDIA_SUMMER_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 434818,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 958297,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1577901,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 3,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 2275318,
      "sourceUnitDefinitionId": "UNIT_AOI_ELEGANT",
      "sourceUnitId": "ally:3",
      "turnNumber": 5,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_LYDIA_SUMMER_TEX",
  "eventCount": 7687,
  "eventSequenceHash": "sha256:fedc2101b38ac052",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 139,
    "ACTION_COMPLETING": 139,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_QUEUE_REORDERED": 2,
    "ACTION_RESERVATION_REMOVED": 2,
    "ACTION_STARTED": 139,
    "ACTION_WAITED": 5,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 100,
    "CONTINUOUS_DAMAGE_APPLIED": 45,
    "COOLDOWN_COMPLETED": 91,
    "COOLDOWN_REDUCED": 108,
    "COOLDOWN_STARTED": 96,
    "CRITICAL_CHECK_RESOLVED": 425,
    "DAMAGE_APPLIED": 425,
    "DAMAGE_CALCULATED": 425,
    "DAMAGE_WILL_BE_APPLIED": 425,
    "EFFECTIVE_EFFECT_CHANGED": 17,
    "EFFECT_ACTION_COMPLETED": 468,
    "EFFECT_ACTION_STARTING": 468,
    "EFFECT_APPLIED": 144,
    "EFFECT_CONSUMPTION_CHANGED": 14,
    "EFFECT_DURATION_REDUCED": 102,
    "EFFECT_EXPIRED": 105,
    "EFFECT_MERGED": 7,
    "EFFECT_REMOVED": 25,
    "EFFECT_STEP_COMPLETED": 441,
    "EFFECT_STEP_STARTING": 441,
    "EVASION_ACTIVATED": 5,
    "EXERCISE_SCORE_ACCUMULATED": 374,
    "EXTRA_GAUGE_INCREASED": 55,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 6,
    "HEAL_APPLIED": 31,
    "HIT_CONFIRMED": 425,
    "HIT_POINT_REDUCED": 425,
    "MARKER_APPLIED": 14,
    "MARKER_REMOVED": 11,
    "MARKER_UPDATED": 24,
    "PASSIVE_ACTIVATED": 60,
    "PASSIVE_POINT_CONSUMED": 60,
    "PASSIVE_RESOLVED": 60,
    "RANDOM_BRANCH_SELECTED": 15,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 464,
    "RUNTIME_COUNTER_CHANGED": 1,
    "SHIELD_CONSUMED": 50,
    "SKILL_USE_COMPLETED": 134,
    "SKILL_USE_STARTED": 134,
    "SKILL_USE_STARTING": 134,
    "SUB_UNIT_DAMAGED": 38,
    "TARGETS_SELECTED": 134,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 179,
    "UNIT_BROKEN": 4,
    "UNIT_DEFEATED": 1,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2525986,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_MAO_SUMMER_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 282328,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 756226,
      "sourceUnitDefinitionId": "UNIT_AOI_GUARDIAN",
      "sourceUnitId": "ally:4",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1312514,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 4,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 1939114,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 5,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_MAO_SUMMER_TEX",
  "eventCount": 7568,
  "eventSequenceHash": "sha256:b9bf9db4efe23d64",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 139,
    "ACTION_COMPLETING": 139,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_QUEUE_REORDERED": 2,
    "ACTION_RESERVATION_REMOVED": 1,
    "ACTION_STARTED": 139,
    "ACTION_WAITED": 5,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 106,
    "CONTINUOUS_DAMAGE_APPLIED": 41,
    "COOLDOWN_COMPLETED": 83,
    "COOLDOWN_REDUCED": 109,
    "COOLDOWN_STARTED": 87,
    "CRITICAL_CHECK_RESOLVED": 425,
    "DAMAGE_APPLIED": 425,
    "DAMAGE_CALCULATED": 425,
    "DAMAGE_WILL_BE_APPLIED": 425,
    "EFFECTIVE_EFFECT_CHANGED": 20,
    "EFFECT_ACTION_COMPLETED": 453,
    "EFFECT_ACTION_STARTING": 453,
    "EFFECT_APPLIED": 135,
    "EFFECT_CONSUMPTION_CHANGED": 21,
    "EFFECT_DURATION_REDUCED": 110,
    "EFFECT_EXPIRED": 95,
    "EFFECT_MERGED": 5,
    "EFFECT_REMOVED": 18,
    "EFFECT_STEP_COMPLETED": 433,
    "EFFECT_STEP_STARTING": 433,
    "EVASION_ACTIVATED": 9,
    "EXERCISE_SCORE_ACCUMULATED": 407,
    "EXTRA_GAUGE_INCREASED": 48,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 5,
    "HEAL_APPLIED": 34,
    "HIT_CONFIRMED": 425,
    "HIT_POINT_REDUCED": 425,
    "MARKER_APPLIED": 13,
    "MARKER_REMOVED": 10,
    "MARKER_UPDATED": 30,
    "PASSIVE_ACTIVATED": 52,
    "PASSIVE_POINT_CONSUMED": 52,
    "PASSIVE_RESOLVED": 52,
    "RANDOM_BRANCH_SELECTED": 15,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 461,
    "RUNTIME_COUNTER_CHANGED": 12,
    "RUNTIME_COUNTER_RESET": 3,
    "SHIELD_CONSUMED": 26,
    "SKILL_USE_COMPLETED": 134,
    "SKILL_USE_STARTED": 134,
    "SKILL_USE_STARTING": 134,
    "TARGETS_SELECTED": 134,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 171,
    "UNIT_BROKEN": 4,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2186049,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_ROSIE_CAMPAIGN_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 355668,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 827822,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1332117,
      "sourceUnitDefinitionId": "UNIT_AOI_ELEGANT",
      "sourceUnitId": "ally:3",
      "turnNumber": 3,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 1890691,
      "sourceUnitDefinitionId": "UNIT_AOI_ELEGANT",
      "sourceUnitId": "ally:3",
      "turnNumber": 4,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_ROSIE_CAMPAIGN_TEX",
  "eventCount": 8201,
  "eventSequenceHash": "sha256:874caa5a76a963af",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 141,
    "ACTION_COMPLETING": 141,
    "ACTION_QUEUE_CREATED": 26,
    "ACTION_QUEUE_REORDERED": 3,
    "ACTION_RESERVATION_REMOVED": 1,
    "ACTION_STARTED": 141,
    "ACTION_WAITED": 7,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 111,
    "CONTINUOUS_DAMAGE_APPLIED": 53,
    "COOLDOWN_COMPLETED": 64,
    "COOLDOWN_REDUCED": 79,
    "COOLDOWN_STARTED": 67,
    "CRITICAL_CHECK_RESOLVED": 384,
    "DAMAGE_APPLIED": 384,
    "DAMAGE_CALCULATED": 384,
    "DAMAGE_WILL_BE_APPLIED": 384,
    "EFFECTIVE_EFFECT_CHANGED": 10,
    "EFFECT_ACTION_COMPLETED": 492,
    "EFFECT_ACTION_STARTING": 492,
    "EFFECT_APPLIED": 139,
    "EFFECT_CONSUMPTION_CHANGED": 29,
    "EFFECT_DURATION_REDUCED": 99,
    "EFFECT_EXPIRED": 102,
    "EFFECT_MERGED": 5,
    "EFFECT_REMOVED": 18,
    "EFFECT_STEP_COMPLETED": 515,
    "EFFECT_STEP_STARTING": 515,
    "EVASION_ACTIVATED": 1,
    "EXERCISE_SCORE_ACCUMULATED": 397,
    "EXERCISE_SCORE_DEDUCTED": 54,
    "EXTRA_GAUGE_INCREASED": 63,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 43,
    "HEAL_APPLIED": 89,
    "HIT_CONFIRMED": 384,
    "HIT_POINT_REDUCED": 384,
    "LETHAL_DAMAGE_SURVIVED": 3,
    "MARKER_APPLIED": 21,
    "MARKER_REMOVED": 15,
    "MARKER_UPDATED": 42,
    "PASSIVE_ACTIVATED": 97,
    "PASSIVE_POINT_CONSUMED": 97,
    "PASSIVE_RESOLVED": 97,
    "RANDOM_BRANCH_SELECTED": 12,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 543,
    "RUNTIME_COUNTER_CHANGED": 339,
    "SHIELD_CONSUMED": 29,
    "SKILL_USE_COMPLETED": 134,
    "SKILL_USE_STARTED": 134,
    "SKILL_USE_STARTING": 134,
    "TARGETS_SELECTED": 134,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 139,
    "UNIT_BROKEN": 4,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2498078,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_SHIRANA_LUCKY_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 413789,
      "sourceUnitDefinitionId": "UNIT_AOI_ELEGANT",
      "sourceUnitId": "ally:3",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 966309,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1555154,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 3,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 2209863,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 4,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_SHIRANA_LUCKY_TEX",
  "eventCount": 6921,
  "eventSequenceHash": "sha256:c274995deb4922af",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 134,
    "ACTION_COMPLETING": 134,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_RESERVATION_REMOVED": 1,
    "ACTION_STARTED": 134,
    "ACTION_WAITED": 7,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 88,
    "CONTINUOUS_DAMAGE_APPLIED": 41,
    "COOLDOWN_COMPLETED": 71,
    "COOLDOWN_REDUCED": 94,
    "COOLDOWN_STARTED": 77,
    "CRITICAL_CHECK_RESOLVED": 394,
    "DAMAGE_APPLIED": 394,
    "DAMAGE_CALCULATED": 394,
    "DAMAGE_WILL_BE_APPLIED": 394,
    "EFFECTIVE_EFFECT_CHANGED": 10,
    "EFFECT_ACTION_COMPLETED": 397,
    "EFFECT_ACTION_STARTING": 397,
    "EFFECT_APPLIED": 135,
    "EFFECT_CONSUMPTION_CHANGED": 15,
    "EFFECT_DURATION_REDUCED": 112,
    "EFFECT_EXPIRED": 93,
    "EFFECT_MERGED": 5,
    "EFFECT_REMOVED": 18,
    "EFFECT_STEP_COMPLETED": 400,
    "EFFECT_STEP_STARTING": 400,
    "EVASION_ACTIVATED": 1,
    "EXERCISE_SCORE_ACCUMULATED": 397,
    "EXTRA_GAUGE_INCREASED": 37,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 3,
    "HEAL_APPLIED": 31,
    "HIT_CONFIRMED": 394,
    "HIT_POINT_REDUCED": 394,
    "MARKER_APPLIED": 13,
    "MARKER_REMOVED": 9,
    "MARKER_UPDATED": 24,
    "PASSIVE_ACTIVATED": 40,
    "PASSIVE_POINT_CONSUMED": 40,
    "PASSIVE_RESOLVED": 40,
    "RANDOM_BRANCH_SELECTED": 15,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 418,
    "RUNTIME_COUNTER_CHANGED": 1,
    "SHIELD_CONSUMED": 24,
    "SKILL_USE_COMPLETED": 127,
    "SKILL_USE_STARTED": 127,
    "SKILL_USE_STARTING": 127,
    "TARGETS_SELECTED": 127,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 138,
    "UNIT_BROKEN": 4,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2667399,
}
`;

exports[`production tactical exercise golden battles > E2E-GOLDEN-TEX: exercise against 'UNIT_SHOUKA_BEACH_TEX' completes deterministically and holds battle invariants 1`] = `
{
  "ally": [
    "UNIT_ANIS_SWEETDEVIL",
    "UNIT_ANIS_TROUBLEMAKER",
    "UNIT_AOI_ELEGANT",
    "UNIT_AOI_GUARDIAN",
    "UNIT_CHIYURU_MAZE",
  ],
  "breakCount": 4,
  "breaks": [
    {
      "breakNumber": 1,
      "cumulativeScoreAtBreak": 366382,
      "sourceUnitDefinitionId": "UNIT_AOI_GUARDIAN",
      "sourceUnitId": "ally:4",
      "turnNumber": 1,
    },
    {
      "breakNumber": 2,
      "cumulativeScoreAtBreak": 1105944,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 2,
    },
    {
      "breakNumber": 3,
      "cumulativeScoreAtBreak": 1917201,
      "sourceUnitDefinitionId": "UNIT_ANIS_TROUBLEMAKER",
      "sourceUnitId": "ally:2",
      "turnNumber": 4,
    },
    {
      "breakNumber": 4,
      "cumulativeScoreAtBreak": 2785705,
      "sourceUnitDefinitionId": "UNIT_CHIYURU_MAZE",
      "sourceUnitId": "ally:5",
      "turnNumber": 5,
    },
  ],
  "completedTurn": 5,
  "completionReason": "TURN_LIMIT_REACHED",
  "enemyUnitDefinitionId": "UNIT_SHOUKA_BEACH_TEX",
  "eventCount": 7385,
  "eventSequenceHash": "sha256:7f34c6726b0faaff",
  "eventTypeCounts": {
    "ACTION_COMPLETED": 135,
    "ACTION_COMPLETING": 135,
    "ACTION_QUEUE_CREATED": 25,
    "ACTION_QUEUE_REORDERED": 3,
    "ACTION_RESERVATION_REMOVED": 1,
    "ACTION_STARTED": 135,
    "ACTION_WAITED": 5,
    "BATTLE_COMPLETED": 1,
    "BATTLE_STARTED": 1,
    "COMBAT_STAT_CHANGED": 175,
    "CONTINUOUS_DAMAGE_APPLIED": 44,
    "COOLDOWN_COMPLETED": 64,
    "COOLDOWN_REDUCED": 80,
    "COOLDOWN_STARTED": 66,
    "CRITICAL_CHECK_RESOLVED": 415,
    "DAMAGE_APPLIED": 417,
    "DAMAGE_CALCULATED": 415,
    "DAMAGE_WILL_BE_APPLIED": 415,
    "EFFECTIVE_EFFECT_CHANGED": 12,
    "EFFECT_ACTION_COMPLETED": 406,
    "EFFECT_ACTION_STARTING": 406,
    "EFFECT_APPLIED": 135,
    "EFFECT_CONSUMPTION_CHANGED": 15,
    "EFFECT_DURATION_REDUCED": 123,
    "EFFECT_EXPIRED": 106,
    "EFFECT_MERGED": 8,
    "EFFECT_REMOVED": 13,
    "EFFECT_STEP_COMPLETED": 439,
    "EFFECT_STEP_STARTING": 439,
    "EVASION_ACTIVATED": 2,
    "EXERCISE_SCORE_ACCUMULATED": 390,
    "EXERCISE_SCORE_DEDUCTED": 10,
    "EXTRA_GAUGE_INCREASED": 50,
    "EXTRA_GAUGE_OVERFLOW_DISCARDED": 5,
    "HEAL_APPLIED": 42,
    "HIT_CONFIRMED": 415,
    "HIT_POINT_REDUCED": 417,
    "LINKED_DAMAGE_GENERATED": 2,
    "MARKER_APPLIED": 14,
    "MARKER_REMOVED": 10,
    "MARKER_UPDATED": 25,
    "PASSIVE_ACTIVATED": 55,
    "PASSIVE_POINT_CONSUMED": 55,
    "PASSIVE_RESOLVED": 55,
    "RANDOM_BRANCH_SELECTED": 15,
    "RESOURCES_RECOVERED": 5,
    "RESOURCE_CHANGED": 454,
    "RUNTIME_COUNTER_CHANGED": 4,
    "SHIELD_CONSUMED": 47,
    "SKILL_USE_COMPLETED": 130,
    "SKILL_USE_STARTED": 130,
    "SKILL_USE_STARTING": 130,
    "TARGETS_SELECTED": 130,
    "TURN_COMPLETED": 5,
    "TURN_COMPLETING": 5,
    "TURN_STARTED": 5,
    "UNIT_BEING_ATTACKED": 136,
    "UNIT_BROKEN": 4,
    "UNIT_REVIVED": 4,
  },
  "totalScore": 2791689,
}
`;
